--- a/views/create.ejs
+++ b/views/create.ejs
@@ -41,7 +41,7 @@
       <div class="row">
           <ul class="nav md-pills nav-justified pills-primary">
               <li class="nav-item">
-                  <a class="nav-link active " href="/">Home</a>
+                  <a class="nav-link active " href="/index">Home</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="/create">Create new post</a>
