--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <Style>
+  <style>
         body {
         background-color: wheat;
       }
@@ -28,7 +28,7 @@
           color:orangered;
       }
     </style>
-  </Style>
+  </style>
   <body>
     <div class="jumbotron">
       <h1>The Life Of A Missionary</h1>
@@ -40,7 +40,7 @@
 <div class="row">
 <ul class="nav md-pills nav-justified pills-primary">
   <li class="nav-item">
-      <a class="nav-link active " href="/">Home</a>
+      <a class="nav-link active " href="/index">Home</a>
   </li>
   <li class="nav-item">
       <a class="nav-link" href="/create">Create new post</a>
@@ -63,8 +63,6 @@
 
 </div>
   
-
-
 
 
       <div class="row">
