--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,8 +32,7 @@
         <br>
 
     </div>
-    
-    <button type="submit" name="signup" class="btn btn-default navbar-btn">Done</button>
+    <a href="/index"><button type="submit" name="signup" class="btn btn-default navbar-btn">Done</button></a>
   </form>
 
     
