--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -177,7 +177,7 @@
               <div class="row">
                   <ul class="nav md-pills nav-justified pills-primary">
                       <li class="nav-item">
-                          <a class="nav-link active " href="/">Home</a>
+                          <a class="nav-link active " href="/index">Home</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="/create">Create new post</a>
@@ -193,8 +193,7 @@
                   </ul>
               
               </div>
-              </div>
-
+            
               <div class="container">
                 <div id="form-main">
                     <div id="form-div">
@@ -212,7 +211,11 @@
                                 <button type="submit" class="button-blue">SUBMIT</button>
                                 <div class="ease"></div>
                             </div>
+
                         </form>
+                        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+                            <a href="https://mdbootstrap.com/bootstrap-tutorial/">Jamie-Lee Cupido</a>
+                          </div>
                         <div id="error_message" style="width:100%; height:100%; display:none; ">
                             <h4>
                                 Error
